--- a/src/index.css
+++ b/src/index.css
@@ -46,6 +46,7 @@ nav ul li a:hover {
   color: lightgray;
 }
 
+
 /* Styling main */
 .container {
   display: flex;
@@ -111,8 +112,7 @@ input[type='submit'] {
   }
 }
 @media only screen and (min-width: 600px) {
-  /* Adjust form styling for larger screens */
+  /* Adjust form styling for extra-large screens */
   form {
     width: 40%; 
-  }
 }
